--- a/09-genericite.Rmd
+++ b/09-genericite.Rmd
@@ -85,7 +85,7 @@ Par exemple : `List<Integer> entiers = new ArrayList<Integer>;`
 
 Une collection est un tableau dynamique sans taille fixe, *çàd* que l'on a pas besoin d'initialiser la taille (comme pour les tableaux classiques `T[]`) et que celle-ci peut évoluer tout au long du programme.
 
-Une `ArrayList` est une collection qui permet la présence de doublon.  
+Une `ArrayList` est une collection indexée qui autorise la présence de doublon.  
 Une instance `ArrayList` a accès à des méthodes comme `add(e:T)`, `get()`, `remove()`, `set()`, `size()`.
 
 Une `LinkedList`, ou liste chaînée, est une collection où une case n'a connaissance que de la case suivante et de la case précédente.  
