--- a/index.Rmd
+++ b/index.Rmd
@@ -13,6 +13,12 @@ link-citations: yes
 github-repo: LSarribouette/notes-poo-java
 ---
 
+```{r libraries, message=FALSE, warning=FALSE, include=FALSE}
+library(renv)
+library(rmarkdown)
+library(bookdown)
+```
+
 # Présentation {-}
 
 L'objectif de ce projet est d'avoir un support durable, clair et facile à manipuler pour mes notes de cours de POO avec Java.  
@@ -25,4 +31,3 @@ En *troisième partie*, j'aborde le **développement en couches** avec Java.
 ---
 
 *Pour information, le projet a été réalisé avec `r R.version.string` et RStudio 2022.7.2.576 (Spotted Wakerobin).*
-
