avancée module 12 couche dal + initialisation renv + ajout libraries en index

--- a/index.Rmd
+++ b/index.Rmd
@@ -13,6 +13,11 @@ link-citations: yes
 github-repo: LSarribouette/notes-poo-java
 ---
 
+```{r libraries, message=FALSE, warning=FALSE, include=FALSE}
+library(renv)
+library(rmarkdown)
+library(bookdown)
+```
 
 # Présentation {-}
 
